--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "flowbite": "^1.8.1",
+    "flowbite-vue": "^0.0.17-next.0",
     "vue": "^3.2.13"
   },
   "devDependencies": {
@@ -21,6 +23,7 @@
     "@vue/eslint-config-typescript": "^9.1.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "tailwindcss": "^3.3.3",
     "typescript": "~4.5.5"
   }
 }
